bad/assign_literal_true_void.example_compiler_output
ERROR
[1mbad/assign_literal_true_void.lat:5:7: [1;31merror: [0;1mleft side is not assignable[m
	true = vfunc();
	     [1;32m^[m
[1mbad/assign_literal_true_void.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	true = vfunc();
	[1;32m^[m
